--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,12 @@
 {%block content%}
     <form action="{% url 'data' %}" method="post">
         {% csrf_token%}
-        {{ form }}
-        
+        {% for field in form.visible_fields %}
+        <div class="form-group">
+            <label for="{{field.id_for_label}}">{{field.label}}</label>
+            {{field}}
+        </div>
+        {% endfor %}
         <input type="submit" value="Enviar" class="btn btn-success" />
     </form>
 {% endblock %}
