--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,15 @@
     <form action="{% url 'data' %}" method="post">
         {% csrf_token%}
         {% for field in form.visible_fields %}
-        <div class="form-group">
-            <label for="{{field.id_for_label}}">{{field.label}}</label>
-            {{field}}
-        </div>
+            <div class="form-group">
+                <label for="{{field.id_for_label}}">{{field.label}}</label>
+                {{field}}
+            </div>
+            {% for error in field.errors %}
+            <div class="text-danger" role="alert">
+                {{field.errors}}
+            </div>
+            {% endfor %}
         {% endfor %}
         <input type="submit" value="Enviar" class="btn btn-success" />
     </form>
